--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,10 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages.</a><br>
+          Theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></br>
+          Customized by <a href="https://twitter.com/barget_m/">Monika Barget</a></br>
+          2019-2023</br></small>
       </div>
     </footer>
   </div>
