--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           <a href="{{ site.github.zip_url }}" class="download-button zip"><span>Download</span></a>
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="code">View {{ site.title | default: site.github.repository_name }} on GitHub</a>
-          <a href="https://ieg-dhr.github.io/DigiKAR/"><img src="https://e1.pngegg.com/pngimages/404/735/png-clipart-metrostation-home-icon-thumbnail.png" alt="drawing" width="50" style="padding=10px" align="right"/></a>
+          <a href="https://ieg-dhr.github.io/DigiKAR/"><img src="https://w7.pngwing.com/pngs/982/122/png-transparent-house-computer-icons-green-home-home-renovation-angle-building-text-thumbnail.png" alt="drawing" width="50" style="padding=10px" align="right"/></a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
