--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           <a href="{{ site.github.zip_url }}" class="download-button zip"><span>Download</span></a>
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="code">View {{ site.title | default: site.github.repository_name }} on GitHub</a>
-          <a href="https://ieg-dhr.github.io/DigiKAR/"><img src="/assets/house-icon.svg" alt="Home Icon" width="30" style="float:right;"/></a>
+          <a href="https://ieg-dhr.github.io/DigiKAR/"><img src="{{ '/assets/house-icon.svg' | relative_url }}" alt="Home Icon" width="30" style="float:right;"/></a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
